Updated for Gulp Workflow

--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import '../bootstrap/css/bootstrap';
+@import '../bootstrap/css/bootstrap.scss';
 @import 'typography';
 @import 'global';
 @import "header";
