Added view animations, lazyload, form validator, call tracling script and some frequently used functions

--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -1,6 +1,8 @@
+
 @import '../bootstrap/css/bootstrap.scss';
 @import 'typography';
 @import 'global';
 @import "header";
 @import "footer";
 @import "home";
+@import "animation.scss";
