--- a/assets/src/scss/global.scss
+++ b/assets/src/scss/global.scss
@@ -1,3 +1,63 @@
-//Colours
 
-//Global Components
+// --------------------
+// GLOBAL COMPONENTS
+//---------------------
+
+// Generic Section Padding - adds padding to each section - most of your sections should use this - override for special cases
+section {
+    padding: 80px 0px;
+    position: relative;
+}
+
+// Background Images - positions the background image behind the content in the section
+.background-image-container {
+    overflow: hidden;
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+
+	img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        user-select: none;
+    }
+    
+    // Background Overlay - Adds a colour overlay with transparency options
+    &.semi-transparent-bg {
+        &-dark {
+            background: #000;
+            img {
+                opacity: 0.6;
+            }
+        }
+        &-light {
+            background: #fff;
+            img {
+                opacity: 0.4;
+            }
+        }
+    }
+}
+
+// Youtube Video Embeds
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+
+    iframe,
+    object,
+    embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+    
