--- a/assets/src/scss/header.scss
+++ b/assets/src/scss/header.scss
@@ -54,9 +54,9 @@ header {
     }
 
     // Got questions (if it exists)
-    span {
+    // span {
         
-    }
+    // }
     // Phone number text
     em {
         font-style: normal;
