--- a/assets/src/scss/typography.scss
+++ b/assets/src/scss/typography.scss
@@ -1,7 +1,13 @@
 // --------------------
 // Include Fonts Here
 // --------------------
-
+@font-face {
+    font-family: 'Averta-Regular';
+    src: url('../fonts/Averta-Regular.woff2') format('woff2'),
+    url('../fonts/Averta-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 // --------------------
 //  Include Basic Typography
