--- a/assets/src/scss/form.scss
+++ b/assets/src/scss/form.scss
@@ -1,10 +1,74 @@
 form {
     input[type=text],
     input[type=email],
-    input[type=tel] {
-        padding: 15px;
+    input[type=tel],
+    textarea,
+    select {
+        width: 100%;
+        padding: 20px 15px 20px 50px;
         box-shadow: 1px 1px 10px rgba(0,0,0,0.1);
         border: none;
         margin-bottom: 10px;
+        border: none;
+        margin-bottom: 15px;
+        border-radius: 5px;
+        font-size: 1rem;
+        line-height: 1;
+        @include media-breakpoint-up(sm) {
+            padding: 20px 15px 20px 70px;
+        }
+        &:-internal-autofill-selected {
+            background-color: $white !important;
+            background-image: none !important;
+            color: -internal-light-dark-color(black, white) !important;
+        }
+    }
+
+    textarea {
+        height: 210px !important;
+    }
+
+    label {
+        position: relative;
+        width: 100%;
+        margin-bottom: 0;
+        &.error {
+            display: block;
+            margin-bottom: 20px;
+            margin-top: -10px;
+            color: red;
+            font-size: .9rem;
+        }
+        // .icon {
+        //     position: absolute;
+        //     top: 20px;
+        //     left: 15px;
+        //     background-size: 80%;
+        //     width: 25px;
+        //     height: 25px;
+        //     z-index: 999;
+        //     margin: auto;
+        //     background-repeat: no-repeat;
+        //     background-position: center center;
+        //     @include media-breakpoint-up(sm) {
+        //         left: 25px;
+        //     }
+        //     &.icon-name {
+        //         background-image: url('../../../assets/prod/images/icon-username.png');
+        //     }
+        //     &.icon-email {
+        //         background-image: url('../../../assets/prod/images/icon-email.png');
+        //     }
+        //     &.icon-phone {
+        //         background-image: url('../../../assets/prod/images/icon-phone.png');
+        //     }
+        //     &.icon-pain {
+        //         background-image: url('../../../assets/prod/images/icon-postcode.png');
+        //     }
+        //     &.icon-message {
+        //         background-image: url('../../../assets/prod/images/icon-message.png');
+        //     }
+            
+        // }
     }
 }
