--- a/assets/src/scss/global.scss
+++ b/assets/src/scss/global.scss
@@ -5,8 +5,11 @@
 
 // Generic Section Padding - adds padding to each section - most of your sections should use this - override for special cases
 section {
-    padding: 80px 0px;
+    padding: 60px 0px;
     position: relative;
+    @include media-breakpoint-up(md) {
+        padding: 120px 0px;
+    }
 }
 
 // Background Images - positions the background image behind the content in the section
