--- a/assets/src/scss/header.scss
+++ b/assets/src/scss/header.scss
@@ -3,6 +3,7 @@ header {
     padding: 15px;
     
     &.scrolled {
+        box-shadow: 0px 10px 20px rgba(0,0,0,0.03);
         transition: background 0.2s ease-in-out;
         background: $headerbg;
     }
