--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -21,6 +21,9 @@
 @import 'form';
 @import 'ebook';
 
+// @import 'multi-step-form';
+// @import 'questionnaire-page';
+
 // Additional Pages
 @import 'ebook-page';
 @import 'thank-you-page';
