--- a/assets/src/scss/global.scss
+++ b/assets/src/scss/global.scss
@@ -54,19 +54,58 @@ section {
 }
 
 // Youtube Video Embeds
-.video-container {
+.video-preview-container {
     position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px; height: 0; overflow: hidden;
-
+    padding-bottom: 54.25%;
+    overflow: hidden;
+    
     iframe,
     object,
-    embed {
+    embed,
+    .overlay {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
     }
+
+	img{
+		width: 100%;
+	}
+
+	.play-button {
+		transition: all 0.3s ease;
+		width: 100px;
+		position: absolute;
+		left: calc(50% - 50px);
+		top: calc(50% - 40px);
+		padding: 0;
+		margin: 0;
+		border: none;
+		appearance: none;
+		background: none;
+		z-index: 4;
+
+		&:hover {
+			transform: scale(1.1);
+			cursor: pointer;
+		}
+		&:focus {
+			outline: 0;
+		}
+
+		img {
+			width: 100%;
+		}
+	}
+
+	iframe {
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 3;
+	}
 }
-    
