--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -5,8 +5,8 @@
 @import 'accordion'; // Styles for FAQ accordion
 
 /* purgecss start ignore */
-@import 'vendor/slick'; // Default slick styles 
-@import 'vendor/slick-theme'; // Default slick styles 
+@import 'vendor/slick.scss'; // Default slick styles
+@import 'vendor/slick-theme.scss'; // Default slick styles
 /* purgecss end ignore */
 
 // Default Styles
@@ -20,6 +20,7 @@
 @import 'button';
 @import 'form';
 @import 'ebook';
+@import 'table';
 
 // @import 'multi-step-form';
 // @import 'questionnaire-page';
