--- a/assets/src/scss/variables.scss
+++ b/assets/src/scss/variables.scss
@@ -11,7 +11,10 @@ $primary        : #42c7b3;
 $secondary      : #333;
 $headerbg       : #fff; // Header scrolled background color.
 
-
+$bg-table-active-color : #a2e4b9;
+$slider-title-color : #ffffff;
+$slick-dot-color : #ffffff;
+$slick-active-dot-color : #a2e4b9;
 // --------------------
 // Container Options
 //---------------------
