--- a/assets/src/scss/variables.scss
+++ b/assets/src/scss/variables.scss
@@ -1,6 +1,7 @@
 // --------------------
 // VARIABLES
 //---------------------
+$root-font-size: 18px;
 
 $headerheight   : 150px;  // Change to approximate header height - adds padding to first section
 $header-starting-width: 280px;
