responsive form height, also stop multi step form overriding other forms

--- a/assets/src/scss/multi-step-form.scss
+++ b/assets/src/scss/multi-step-form.scss
@@ -105,8 +105,7 @@ button.next {
 
 
 // Infusion Form Specific Radio Button & Checkbox Styles
-.infusion-form,
-form {
+#questionnaire-form {
 	fieldset,
 	._form_element,
 	.form-group,
