--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -22,6 +22,7 @@
 @import 'form';
 @import 'ebook';
 @import 'table';
+@import 'checklist';
 
 // @import 'multi-step-form';
 // @import 'questionnaire-page';
