--- a/assets/src/scss/button.scss
+++ b/assets/src/scss/button.scss
@@ -6,19 +6,20 @@
 button,
 input[type=submit],
 input[type=button] {
-    display: block;
-    margin: 0 auto  12px;
     border: 0;
     border-radius: 5px;
     font-size: 1rem;
     line-height: 1;
     text-transform: uppercase;
     letter-spacing: 2px;
-    padding: 15px 30px;
+    padding: 20px 10px;
     white-space: normal;
     background: $primary;
     color: #fff;
     transition: background-color .4s ease-in-out;
+    @include media-breakpoint-up(md) {
+        padding: 30px;
+    }
     &:hover,
     &:focus,
     &:active {
@@ -26,6 +27,10 @@ input[type=button] {
         background: rgba($primary, .8);
     }
 }
-.btn {
-    
+
+.btn-section {
+    p {
+        width: 90%;
+        margin: 0 auto;
+    }
 }
