--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -6,8 +6,7 @@
 @import 'accordion'; // Styles for FAQ accordion
 
 /* purgecss start ignore */
-@import 'vendor/slick'; // Default slick styles
-@import 'vendor/slick-theme'; // Default slick styles
+@import 'vendor/slick.scss'; // Default slick styles
 /* purgecss end ignore */
 
 // Default Styles
