--- a/assets/src/scss/button.scss
+++ b/assets/src/scss/button.scss
@@ -6,8 +6,10 @@
 button,
 input[type=submit],
 input[type=button] {
+    width: 100%;
     border: 0;
     border-radius: 5px;
+    margin-bottom: 12px;
     font-size: 1rem;
     line-height: 1;
     text-transform: uppercase;
