--- a/assets/src/scss/typography.scss
+++ b/assets/src/scss/typography.scss
@@ -44,6 +44,10 @@ html, body {
     @include font-smoothing('on');
 }
 
+p {
+    margin-bottom: 0.5rem;
+}
+
 // Headline padding
 h1, .h1, 
 h2, .h2,
@@ -59,11 +63,11 @@ h6, .h6 {
 }
 
 h1, .h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 h2, .h2 {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
 }
 
 h3, .h3 {
