--- a/assets/src/scss/variables.scss
+++ b/assets/src/scss/variables.scss
@@ -27,10 +27,11 @@ $secondary      : #333;
 
 $headerbg       : #fff; // Header scrolled background color.
 
-$bg-table-active-color : #a2e4b9;
+$bg-table-active-color : #42c7b3;
+
 $slider-title-color : #ffffff;
 $slick-dot-color : #ffffff;
-$slick-active-dot-color : #a2e4b9;
+$slick-active-dot-color : #42c7b3;
 // --------------------
 // Container Options
 //---------------------
