Minor style updates & added Steps block section

--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -22,6 +22,7 @@
 @import 'ebook';
 @import 'table';
 @import 'checklist';
+@import 'steps';
 
 // @import 'multi-step-form';
 // @import 'questionnaire-page';
