--- a/assets/src/scss/global.scss
+++ b/assets/src/scss/global.scss
@@ -4,17 +4,14 @@
 //---------------------
 
 // Generic Section Padding - adds padding to each section - most of your sections should use this - override for special cases
-body {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
 section {
     padding: 60px 0px;
     position: relative;
+    overflow: hidden;
     @include media-breakpoint-up(md) {
+        padding: 80px 0px;
+    }
+    @include media-breakpoint-up(lg) {
         padding: 120px 0px;
     }
 }
@@ -80,8 +77,7 @@ section {
     }
 
 	.play-button {
-		transition: all 0.3s ease;
-		width: 100px;
+        width: 100px;
 		position: absolute;
 		left: calc(50% - 50px);
 		top: calc(50% - 40px);
@@ -91,6 +87,7 @@ section {
 		appearance: none;
 		background: none;
 		z-index: 5;
+		transition: .8s ease;
 
 		&:hover {
 			transform: scale(1.1);
