--- a/assets/src/scss/checklist.scss
+++ b/assets/src/scss/checklist.scss
@@ -51,7 +51,8 @@ ul {
         li {
 			&::before {
 				content:'\f00c';
-				font-family: 'FontAwesome';
+				font-family: 'Font Awesome 5 Free';
+				
 			}
         }
 	}
