--- a/assets/src/scss/table.scss
+++ b/assets/src/scss/table.scss
@@ -15,7 +15,7 @@
 				padding: 20px;
 			}
 			i {
-				font-family: 'FontAwesome';
+				font-family: 'Font Awesome 5 Free';
 				font-size: 2rem !important;
 				line-height: 1;
 				font-style: normal;
