--- a/assets/src/scss/multi-step-form.scss
+++ b/assets/src/scss/multi-step-form.scss
@@ -2,42 +2,29 @@
 /*progressbar*/
 #progressbar {
 	display: flex;
-	margin-top: 50px;
-	margin-bottom: 30px;
-	overflow: hidden;
+	margin: 30px 0;
 	counter-reset: step;
 	padding-left: 0px;
 	li {
-		flex: 1;
-		list-style-type: none;
-		color: white;
-		text-transform: uppercase;
-		font-size: 12px;
 		position: relative;
-		font-family: "Poppins";
-		padding-left: 0px;
+		flex: 1;
+		color: white;
 
 		// Progressbar Steps
 		&::before {
 			content: counter(step);
 			counter-increment: step;
+			position: relative;
+			z-index: 2;
 			display: block;
-			width: 16px;
-			line-height: 16px;
-			font-size: 10px;
+			width: 2rem;
+			margin: 0 auto;
+			border-radius: 50%;
+			font-size: 1rem;
+			line-height: 2rem;
 			font-weight: 600;
 			color: #676767;
 			background: #f3f3f3;
-			border-radius: 15px;
-			padding: 0px;
-			margin: 0 auto 5px auto;
-			position: relative;
-			z-index: 2;
-			text-align: center;
-			@include media-breakpoint-up(md) {
-				width: 25px;
-				line-height: 25px;
-			}
 		}
 
 		/*progressbar connectors*/
@@ -48,11 +35,8 @@
 			background: #f3f3f3;
 			position: absolute;
 			left: -50%;
-			top: 5px;
+			top: .8rem;
 			z-index: 1; /*put it behind the numbers*/
-			@include media-breakpoint-up(md) {
-				top: 10px;
-			}
 		}
 
 		&:first-child:after {
@@ -60,19 +44,14 @@
 		}
 
 		/*marking active/completed steps red*/
-		&.active:before,  #progressbar li.active:after {
+		&.active:before, &.active:after {
 			background: $primary;
 			color: #fff;
 		}
-
 	}
 }
 
-#questionnaire-form {
-	position: relative;
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
+#questionnaire form {
 	margin-bottom: 100px;
 
 	fieldset,
@@ -82,18 +61,53 @@
 		/*stacking fieldsets above each other*/
 		position: absolute;
 		padding: 6%;
-		margin-left: auto;
-		margin-right: auto;
 		width: 100%;
 		border-radius: 30px;
 		box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.1);
 
 		/*Hide all except first fieldset*/
 		&:not(:first-of-type) {
-		  visibility: hidden;
+			visibility: hidden;
+			opacity: 0;
+			pointer-events: none;
 		}
 	}
+	// Custom Radio button & Select
+	.infusion-option,
+	._checkbox-radio {
+
+		input[type=radio],
+		input[type=checkbox]  {
+			display: none;
+			visibility: hidden;
+			width: 0;
+			margin: 0;
+			padding: 0;
+		
+			&:checked + label {
+				background: rgba($primary, .5)
+			  }
+		}
 	
+		label {
+			max-width: 200px;
+			margin: 16px;
+			padding: 20px 10px;
+			border-radius: 6px;
+			color: #fff;
+			background: $primary;
+			cursor: pointer;
+			transition: .4s ease;
+			user-select: none;
+
+			&:hover,
+			&:active,
+			&.active {
+				background: rgba($primary, .8);
+				color: #fff;
+			}
+		}
+	}
 }
 
 /* next buttons */
@@ -102,227 +116,3 @@ button.previous,
 input.next,
 button.next {
 }
-
-
-// Infusion Form Specific Radio Button & Checkbox Styles
-#questionnaire-form {
-	fieldset,
-	._form_element,
-	.form-group,
-	.infusion-field {
-		
-		.infusion-option,
-		.checkbox-option,
-		.radio-option {
-
-			input[type=radio],
-			input[type=checkbox]  {
-				display: none;
-				visibility: hidden;
-				width: 0;
-				margin: 0;
-				padding: 0;
-			
-				&:checked + label {
-					background: rgba($primary, .5)
-				  }
-			}
-		
-			label {
-				position: relative;
-				display: inline-block;
-				width: 100%;
-				max-width: 200px;
-				margin: 16px;
-				padding: 20px 10px;
-				border-radius: 6px;
-				color: #fff;
-				background: $primary;
-				font-family: "Poppins";
-				font-size: 1rem;
-				line-height: 1;
-				cursor: pointer;
-				transition: background 0.2s ease;
-				-webkit-touch-callout: none; /* iOS Safari */
-				-webkit-user-select: none; /* Safari */
-				-khtml-user-select: none; /* Konqueror HTML */
-				-moz-user-select: none; /* Firefox */
-					-ms-user-select: none; /* Internet Explorer/Edge */
-						user-select: none; /* Non-prefixed version, currently
-											supported by Chrome and Opera */
-	
-				&:hover,
-				&:active,
-				&.active {
-					background: rgba($primary, .8);
-					color: #fff;
-				}
-			}
-	
-			/* buttons with icons */
-			// i.fa {
-			// 	display: block; 
-			// 	margin-bottom: 16px;
-			// 	margin-left: auto;
-			// 	margin-right: auto;
-			// 	width: auto;
-			// }
-		}
-	}
-}
-
-
-// .options-container {
-//   display: flex;
-//   flex-wrap: wrap;
-//   justify-content: center;
-//   align-items: stretch;
-// }
-// .options-container .infusion-option {
-//   flex: 1 25%;
-//   align-self: stretch;
-//   display: flex;
-// }
-// .options-container .infusion-option label {
-//   align-self: stretch;
-// }
-
-// .options-container.one-col .infusion-option { flex: 1 100%; }
-// .options-container.one-half .infusion-option { flex: 1 50%; }
-// .options-container.one-third .infusion-option { flex: 1 33.333%; }
-// .options-container.one-tenth .infusion-option { flex: 1 10%; position: relative; }
-
-
-// /* checkbox styles */
-// input[type="checkbox"]:checked + label [class^="fa"] {
-//   opacity: 1;
-// }
-
-// /* radio and checkboxes in the checkmark list style */
-// .checklist input[type="checkbox"] + label:before,
-// .checklist input[type="radio"] + label:before {
-//   font-family: fontawesome;
-//   content: '\f1db';
-//   position: absolute;
-//   left: 13px;
-//   top: 50%;
-//   margin-top: -11px;
-//   font-size: 46px;
-//   color: #d4d4d4;
-// }
-// .checklist input[type="checkbox"] + label,
-// .checklist input[type="radio"] + label {
-//   padding-left: 62px !important;
-//   padding-right: 40px;
-// }
-// .checklist input[type="checkbox"]:hover + label:before,
-// .checklist input[type="radio"]:hover + label:before {
-//   content: '\f05d';
-// }
-// .checklist input[type="checkbox"]:active + label:before,
-// .checklist input[type="radio"]:active + label:before {
-//   content: '\f058';
-// }
-// .checklist input[type="checkbox"]:checked + label:before,
-// .checklist input[type="radio"]:checked + label:before {
-//   content: '\f058';
-// }
-// .checklist input[type="checkbox"]:hover + label:before,
-// .checklist input[type="radio"]:hover + label:before {
-//   color: #fff;
-// }
-
-
-// /* spinner overlay */
-// .infusion-submit,
-// input[type=submit],
-// button[type=submit] {
-// 	position: relative;
-// 	margin-top: 20px;
-// } 
-// .infusion-submit button[type=submit] { margin-top: 0px !important;}
-
-// .spinner-none { display: none; }
-// .spinner-overlay {
-// 	display: block;
-// 	background: $primary;
-// 	position: absolute;
-// 	top: 0px;
-// 	content: " ";
-// 	height: 100%;
-// 	width: 100%;
-// 	border-top-left-radius: 40px;
-// 	border-bottom-left-radius: 40px;
-// 	border-top-right-radius: 40px;
-// 	border-bottom-right-radius: 6px;
-// }
-// .spinner {
-// 	-webkit-animation: rotator 1.4s linear infinite;
-// 	animation: rotator 1.4s linear infinite;
-// 	width: 25px;
-// 	height: 25px;
-// 	left: 50%;
-// 	margin-left: -12px;
-// 	display: block;
-// 	position: absolute;
-// 	top: 19px;
-// }
-// @-webkit-keyframes
-// rotator{0%{-webkit-transform:rotate(0deg);transform:rotate(0deg)}100%{-webkit-transform:rotate(270deg);transform:rotate(270deg)}}@keyframes
-// rotator{0%{-webkit-transform:rotate(0deg);transform:rotate(0deg)}100%{-webkit-transform:rotate(270deg);transform:rotate(270deg)}}.path{stroke-dasharray:187;stroke-dashoffset:0;-webkit-transform-origin:center;transform-origin:center;-webkit-animation:dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;animation:dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite}@-webkit-keyframes
-// colors{0%{stroke:#fff}25%{stroke:#fff}50%{stroke:#fff}75%{stroke:#fff}100%{stroke:#fff}}@keyframes
-// colors{0%{stroke:#fff}25%{stroke:#fff}50%{stroke:#fff}75%{stroke:#fff}100%{stroke:#fff}}@-webkit-keyframes
-// dash{0%{stroke-dashoffset:187}50%{stroke-dashoffset:46.75;-webkit-transform:rotate(135deg);transform:rotate(135deg)}100%{stroke-dashoffset:187;-webkit-transform:rotate(450deg);transform:rotate(450deg)}}@keyframes
-// dash{0%{stroke-dashoffset:187}50%{stroke-dashoffset:46.75;-webkit-transform:rotate(135deg);transform:rotate(135deg)}100%{stroke-dashoffset:187;-webkit-transform:rotate(450deg);transform:rotate(450deg)}}
-
-
-// @media screen and (max-width: 689px) {
-
-	// .infusion-form .titleicon {
-	// 	font-size: 41px;
-	// }
-	
-	// .infusion-form .infusion-field .infusion-option label {
-	// 	font-size: 16px;
-	// 	padding-top: 12px;
-	// 	padding-bottom: 12px;
-	// 	margin-left: 2px;
-	// 	margin-bottom: 4px;
-	// 	margin-right: 2px;
-	// 	line-height: 20px;
-	// }
-	// .infusion-form .infusion-field .infusion-option i.fa {
-	// 	font-size: 26px;
-	// 	margin-bottom: 0px !important;
-	// }
-	// .options-container .infusion-option { flex: 1 50%; }
-	// .next.action-button {
-	// 	width: 100%;
-	// 	margin-top: 6px;
-	// }
-	// .infusion-form .infusion-field textarea {
-	// 	width: 90%;
-	// 	padding: 5% !important;
-	// }
-	// .checklist .infusion-option {
-	// 	flex: 1 100% !important;
-	// }
-	// .checklist input[type="checkbox"] + label:before, .checklist input[type="radio"] + label:before {
-	// 	left: 9px;
-	// 	margin-top: -10px;
-	// 	font-size: 29px;
-	// }
-	// .checklist input[type="checkbox"] + label,
-	// .checklist input[type="radio"] + label {
-	// 	padding-left: 35px !important;
-	// }
-	// /* ranking 1-10 scale */
-	// .options-container.one-tenth .infusion-option label { 
-	// 	padding: 8px 1px;
-	// 	font-size: 13px;
-	// }
-
-// }
-
-
-
