--- a/assets/src/scss/questionnaire-page.scss
+++ b/assets/src/scss/questionnaire-page.scss
@@ -1,3 +1,8 @@
 .questionnaire-page {
-    
+    #questionnaire {
+        min-height: 95vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
