--- a/assets/src/scss/table.scss
+++ b/assets/src/scss/table.scss
@@ -60,16 +60,16 @@
 
 		td {
 			img {
-				max-width: 54px;
-				@include media-breakpoint-down(sm) {
-					max-width: 40px;
+				max-width: 40px;
+				@include media-breakpoint-up(sm) {
+					max-width: 54px;
 				}
 			}
 			&:last-child {
 				img {
-					max-width: 30px;
-					@include media-breakpoint-down(sm) {
-						max-width: 20px;
+					max-width: 20px;
+					@include media-breakpoint-up(sm) {
+						max-width: 30px;
 					}
 					&.icon-x {
 						max-width: 18px;
