--- a/assets/src/scss/typography.scss
+++ b/assets/src/scss/typography.scss
@@ -24,30 +24,25 @@ $body-font: 'Averta-regular', sans-serif;
 //  Include Basic Typography
 // --------------------
 
-:root,
-html,
-body {
-    font-size: px(.8); //16px
-    line-height: 1.4;
-    
+:root {
+    font-size: 50%;  //1rem = 8px
     @include media-breakpoint-up(md) {
-        font-size: px(.9); //18px
+        font-size: 56.25%; //1rem = 9px
     }
-    
     @include media-breakpoint-up(lg) {
-        font-size: $root-font-size; // $root-font-size in variables file - 20px
+        font-size: 62.5%; // 1rem = 10px
     }
-    
 }
 
 html, body {
-    font-family: $body-font;
     @include font-smoothing('on');
+    font-size: 2rem; //Laptop: 20px, Ipads: 18px, Mobiles: 16px
+    line-height: 1.4;
+    font-family: $body-font;
 }
 
 p {
-    margin-bottom: 0.5rem;
-    font-style: 1rem;
+    margin-bottom: 1.6rem;
 }
 
 // Headline padding
@@ -58,34 +53,34 @@ h4, .h4,
 h5, .h5,
 h6, .h6 {
     line-height: 1.3;
-    margin-bottom: 20px;
+    margin-bottom: 2rem;
     font-family: $headings-font;
     font-weight: bold;
     text-transform: capitalize;
 }
 
 h1, .h1 {
-    font-size: 2.5rem;
+    font-size: 5rem;  //Laptop: 50px, Ipads: 45px, Mobiles: 40px
 }
 
 h2, .h2 {
-    font-size: 2.3rem;
+    font-size: 4.6rem;  //Laptop: 46px, Ipads: 41.4px, Mobiles: 36.8px
 }
 
 h3, .h3 {
-    font-size: 1.5rem;
+    font-size: 3rem;  //Laptop: 30px, Ipads: 27px, Mobiles: 24px
 }
 
 h4, .h4 {
-    font-size: 1.2rem;
+    font-size: 2.4rem;  //Laptop: 24px, Ipads: 21.6px, Mobiles: 19.2px
 }
 
 h5, .h5 {
-    font-size: 1rem;
+    font-size: 2rem;  //Laptop: 20px, Ipads: 18px, Mobiles: 16px
 }
 
 h6, .h6 {
-    font-size: .9rem;
+    font-size: 1.8rem;  //Laptop: 18px, Ipads: 16.2px, Mobiles: 14.4px
 }
 
 // Hero Specific Font Sizes
