--- a/assets/src/scss/variables.scss
+++ b/assets/src/scss/variables.scss
@@ -1,14 +1,6 @@
 // --------------------
 // VARIABLES
 //---------------------
-$root-font-size: 20px;
-
-// $h1-font-size:         		 2.5rem;
-// $h2-font-size:                2rem;
-// $h3-font-size:                1.75rem;
-// $h4-font-size:                1.5rem;
-// $h5-font-size:                1.25rem;
-// $h6-font-size:                1rem;
 
 $headerheight   : 150px;  // Change to approximate header height - adds padding to first section
 $header-starting-width: 280px;
@@ -32,21 +24,23 @@ $bg-table-active-color : #42c7b3;
 $slider-title-color : #ffffff;
 $slick-dot-color : #ffffff;
 $slick-active-dot-color : #42c7b3;
+
 // --------------------
 // Container Options
 //---------------------
 
-// $container-max-widths: (
-//   sm: 540px,
-//   md: 720px,
-//   lg: 960px,
-//   xl: 1140px,
-//   );
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px,
+  );
   
-// $grid-breakpoints: (
-// 	xs: 0,
-// 	sm: 576px,
-// 	md: 768px,
-// 	lg: 992px,
-// 	xl: 1140px,
-// );
+$grid-breakpoints: (
+	xs: 0,
+	sm: 576px,
+	md: 768px,
+	lg: 992px,
+    xl: 1140px,
+    xxl: 1600px,
+);
