Added countdown timer & progressbar, updated font sizes of button, checklist & forms according to typography

--- a/assets/src/scss/global.scss
+++ b/assets/src/scss/global.scss
@@ -126,3 +126,12 @@ section {
 .container-fluid {
     max-width: 1750px;
 }
+
+.color {
+    &-primary {
+        color: $primary;
+    }
+    &-secondary {
+        color: $secondary;
+    }
+}
